# cv-magic

./: Cargo.toml  Makefile.toml
src/: cli.rs  error.rs  index.rs  main.rs  parser.rs  renderer.rs
