[package]
name = "cv-magic"
version = "0.1.0"
authors = ["Andras Pinter <andras@pinter.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.tokio]
version = "1.15"
features = ["full"]

[dependencies.warp]
version = "0.3"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.toml]
version = "0.5"

[dependencies.tera]
version = "1.15"

[dependencies.thiserror]
version = "1.0"

[dependencies.structopt]
version = "0.3"
features = ["paw"]

[dependencies.paw]
version = "1.0"
