[package]
name = "cv-magic"
version = "0.3.0"
authors = ["Andras Pinter <andras@pinter.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.rocket]
version = "0.5.0-rc.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.toml]
version = "0.5"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]

[dependencies.thiserror]
version = "1.0"

[dependencies.structopt]
version = "0.3"
features = ["paw"]

[dependencies.paw]
version = "1.0"

[dependencies.tera]
version = "1.15"

[dependencies.tempfile]
version = "3.3"
